fragmenty gry cz1

--- a/app/src/main/res/layout/fragment_fill_blanks.xml
+++ b/app/src/main/res/layout/fragment_fill_blanks.xml
@@ -1,14 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentsGame.FragmentFillBlanks">
+    android:gravity="center"
+    android:id="@+id/constraintLayoutFillBlanks"
 
-    <!-- TODO: Update blank fragment layout -->
+    >
+
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/questionTextView"
+        android:layout_width="146dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="200dp"
+        android:gravity="center"
+        android:text="questionTextView"
 
-</FrameLayout>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/questionTextView"
+        app:layout_constraintStart_toStartOf="@+id/questionTextView"
+        app:layout_constraintTop_toBottomOf="@+id/questionTextView"
+        android:gravity="center">
+        <Button
+            android:id="@+id/firstAnswerBt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button1"></Button>
+
+        <Button
+            android:id="@+id/secondAnswerBt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button2"></Button>
+
+        <Button
+            android:id="@+id/thirdAnswerBt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button3"></Button>
+
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
