--- a/app/src/main/res/layout/fragment_multiple_choice.xml
+++ b/app/src/main/res/layout/fragment_multiple_choice.xml
@@ -1,14 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayoutMultipleChoice"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentsGame.FragmentMultipleChoice">
+    android:gravity="center"
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/questionTextView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:gravity="center"
+        android:text="question"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></TextView>
 
-</FrameLayout>
+    <LinearLayout
+        android:id="@+id/checkboxesContainer"
+        android:layout_width="413dp"
+        android:layout_height="184dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/checkBt"
+        app:layout_constraintLeft_toLeftOf="@+id/questionTextView"
+        app:layout_constraintRight_toRightOf="@+id/questionTextView"
+        app:layout_constraintTop_toBottomOf="@+id/questionTextView">
+
+        <CheckBox
+            android:id="@+id/firstAnswerCheck"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="first"></CheckBox>
+
+        <CheckBox
+            android:id="@+id/secondAnswerCheck"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="second"
+
+            ></CheckBox>
+
+        <CheckBox
+            android:id="@+id/thirdAnswerCheck"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="third"
+
+            ></CheckBox>
+
+    </LinearLayout>
+
+    <Button
+        android:text="Check"
+        android:id="@+id/checkBt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="@+id/checkboxesContainer"
+        app:layout_constraintLeft_toLeftOf="@+id/checkboxesContainer"
+        app:layout_constraintTop_toBottomOf="@+id/checkboxesContainer"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+    </Button>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
