--- a/app/src/main/res/layout/fragment_translate_sentences.xml
+++ b/app/src/main/res/layout/fragment_translate_sentences.xml
@@ -1,14 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayoutTranslateSentence"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentsGame.FragmentTranslateSentences">
+    android:gravity="center"
 
-    <!-- TODO: Update blank fragment layout -->
+    >
+
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/questionTextView"
+        android:layout_width="415dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="84dp"
+        android:gravity="center"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-</FrameLayout>
+    </TextView>
+
+    <EditText
+        android:id="@+id/answerEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="368dp"
+        android:gravity="center"
+        android:hint="write your answer there"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/questionTextView"
+        app:layout_constraintRight_toRightOf="@+id/questionTextView"
+        app:layout_constraintTop_toBottomOf="@+id/questionTextView"></EditText>
+
+    <Button
+        android:id="@+id/checkBt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Check"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/answerEditText"
+        app:layout_constraintRight_toRightOf="@+id/answerEditText"
+        app:layout_constraintTop_toBottomOf="@+id/answerEditText"
+        tools:layout_editor_absoluteX="135dp"
+        tools:layout_editor_absoluteY="322dp">
+
+    </Button>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
