--- a/app/src/main/res/drawable/rounded_border_dimmed.xml
+++ b/app/src/main/res/drawable/rounded_border_dimmed.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@android:color/transparent" />
     <corners android:radius="8dp" />
-    <stroke android:color="@android:color/white" android:width="2dp" />
+    <stroke android:color="@android:color/holo_blue_bright" android:width="2dp" />
 
 
 
