--- a/app/src/main/res/layout/fragment_fill_blanks.xml
+++ b/app/src/main/res/layout/fragment_fill_blanks.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:id="@+id/constraintLayoutFillBlanks"
-
     >
 
 
     <TextView
+        android:textColor="@color/white"
         android:id="@+id/questionTextView"
         android:layout_width="146dp"
         android:layout_height="74dp"
@@ -32,18 +32,21 @@
         app:layout_constraintTop_toBottomOf="@+id/questionTextView"
         android:gravity="center">
         <Button
+            android:textColor="@color/white"
             android:id="@+id/firstAnswerBt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Button1"></Button>
 
         <Button
+            android:textColor="@color/white"
             android:id="@+id/secondAnswerBt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Button2"></Button>
 
         <Button
+            android:textColor="@color/white"
             android:id="@+id/thirdAnswerBt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
