--- a/app/src/main/res/layout/fragment_multiple_choice.xml
+++ b/app/src/main/res/layout/fragment_multiple_choice.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:textColor="@color/white"
         android:id="@+id/questionTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,6 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/questionTextView">
 
         <CheckBox
+            android:textColor="@color/white"
             android:id="@+id/firstAnswerCheck"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,6 +41,7 @@
             android:text="first"></CheckBox>
 
         <CheckBox
+            android:textColor="@color/white"
             android:id="@+id/secondAnswerCheck"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -48,6 +51,7 @@
             ></CheckBox>
 
         <CheckBox
+            android:textColor="@color/white"
             android:id="@+id/thirdAnswerCheck"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
