--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -8,8 +8,8 @@
     >
 
     <LinearLayout
-        android:layout_width="241dp"
-        android:layout_height="223dp"
+        android:layout_width="373dp"
+        android:layout_height="376dp"
         android:orientation="vertical"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,6 +17,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
+
+        <TextView
+            android:layout_width="159dp"
+            android:layout_height="159dp"
+            android:layout_gravity="center"
+            android:background="@drawable/round_button"
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
+            android:text=" 30 \nSeconds!"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="30dp" />
 
         <EditText
             android:id="@+id/usernameText"
@@ -28,11 +40,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:gravity="center"
 
             />
 
 
         <EditText
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
             android:id="@+id/passwordText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -48,7 +63,9 @@
             android:id="@+id/loginBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:textColor="@color/white"
+            android:fontFamily="@font/roboto"
+            android:background="@drawable/rounded_button"
             android:text="Login"
             app:layout_constraintEnd_toEndOf="@+id/passwordText"
             app:layout_constraintHorizontal_bias="0.491"
@@ -59,7 +76,11 @@
             android:id="@+id/registerBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rounded_button"
+            android:fontFamily="@font/roboto"
             android:text="Register"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/loginBtn"
             app:layout_constraintStart_toStartOf="@+id/loginBtn" />
