--- a/app/src/main/res/layout/fragment_final_score.xml
+++ b/app/src/main/res/layout/fragment_final_score.xml
@@ -42,6 +42,7 @@
         android:layout_marginBottom="204dp"
         android:background="@drawable/rounded_button"
         android:id="@+id/backBt"
+        android:textColor="@color/white"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/scoreTextView"
