--- a/app/src/main/res/layout/fragment_translate_sentences.xml
+++ b/app/src/main/res/layout/fragment_translate_sentences.xml
@@ -11,6 +11,7 @@
 
 
     <TextView
+        android:textColor="@color/white"
         android:id="@+id/questionTextView"
         android:layout_width="415dp"
         android:layout_height="54dp"
@@ -24,6 +25,7 @@
     </TextView>
 
     <EditText
+        android:textColor="@color/white"
         android:id="@+id/answerEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,6 +38,8 @@
         app:layout_constraintTop_toBottomOf="@+id/questionTextView"></EditText>
 
     <Button
+        android:textColor="@color/white"
+        android:background="@drawable/rounded_button"
         android:id="@+id/checkBt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
